--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.5.2
+cached-property==1.5.2
 certifi==2022.9.24
 cffi==1.15.1
-charset-normalizer==3.0.0
+charset-normalizer==2.1.1
 cryptography==38.0.3
 defusedxml==0.7.1
 Django==4.1.3
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
+dragonmapper==0.2.6
+hanzidentifier==1.1.0
 idna==3.4
 oauthlib==3.2.2
+prettytable==3.5.0
 psycopg2==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
@@ -18,3 +22,5 @@ requests-oauthlib==1.3.1
 sqlparse==0.4.3
 tzdata==2022.6
 urllib3==1.26.12
+wcwidth==0.2.5
+zhon==1.1.5
