--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - .:/code
     ports:
       - 8000:8000
+    depends_on:
+      - db
+    environment:
+      - "DJANGO_SECRET_KEY=django-insecure-jmz9$$#gv1mw9e91#8%6659--nlc^_j=(bv8adu$1p$#cbqzo7f"
   db:
     image: postgres:15
     environment:
