--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Django==4.1.3
 django-allauth==0.51.0
 django-cache-url==3.4.2
 django-crispy-forms==1.14.0
+django-rosetta==0.9.8
 dragonmapper==0.2.6
 environs==9.5.0
 hanzidentifier==1.1.0
@@ -18,6 +19,7 @@ idna==3.4
 marshmallow==3.19.0
 oauthlib==3.2.2
 packaging==21.3
+polib==1.1.1
 prettytable==3.5.0
 psycopg2==2.9.5
 pycparser==2.21
