--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ Django==4.1.3
 django-allauth==0.51.0
 django-cache-url==3.4.2
 django-crispy-forms==1.14.0
+django-jalali-date==1.0.1
 django-rosetta==0.9.8
 dragonmapper==0.2.6
 environs==9.5.0
 hanzidentifier==1.1.0
 idna==3.4
+jdatetime==4.1.0
 marshmallow==3.19.0
 oauthlib==3.2.2
 packaging==21.3
