--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ dj-email-url==1.0.6
 Django==4.1.3
 django-allauth==0.51.0
 django-cache-url==3.4.2
+django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
 django-jalali-date==1.0.1
+django-js-asset==2.0.0
 django-rosetta==0.9.8
 dragonmapper==0.2.6
 environs==9.5.0
