--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
 django-jalali-date==1.0.1
 django-js-asset==2.0.0
+django-phonenumber-field==7.0.1
 django-rosetta==0.9.8
 dragonmapper==0.2.6
 environs==9.5.0
